[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/UI/DiceUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/dice_roll_sweep_sheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/dice_outline_sheet.png" type="Texture" id=3]
[ext_resource path="res://Sprites/dice_rool_sheet.png" type="Texture" id=4]
[ext_resource path="res://Sprites/dice_dot1.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 41 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": false,
"name": "roll",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 48 ) ],
"loop": true,
"name": "disabled",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "active",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=64]
animations = [ {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 40 ) ],
"loop": false,
"name": "sweep",
"speed": 10.0
} ]

[node name="DiceUI" type="Node2D"]
position = Vector2( 16, 16 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 1 )

[node name="Dice" type="AnimatedSprite" parent="."]
position = Vector2( 32, 32 )
frames = SubResource( 54 )
animation = "idle"

[node name="DiceDots" type="Sprite" parent="."]
position = Vector2( -16, -16 )
texture = ExtResource( 5 )
centered = false

[node name="DiceOutline" type="AnimatedSprite" parent="."]
position = Vector2( 32, 32 )
frames = SubResource( 55 )
animation = "disabled"

[node name="RollSweep" type="AnimatedSprite" parent="."]
position = Vector2( 32, 32 )
z_index = 100
frames = SubResource( 64 )
animation = "idle"

[connection signal="animation_finished" from="RollSweep" to="." method="_on_RollSweep_animation_finished"]
